--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a class="mr-5 hover:text-white">Symptoms</a>
                 <a class="mr-5 hover:text-white">Precautions</a>
                 <a class="mr-5 hover:text-white">Vaccination</a>
-                <a class="mr-5 hover:text-white">FAQ'S</a>
+                <a class="mr-5 hover:text-white">FAQ's</a>
               </nav>
               <button class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">LOG IN/SIGN UP
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
