--- a/index.html
+++ b/index.html
@@ -46,6 +46,23 @@
           </div>
         </div>
       </section>
+<iframe src='https://webchat.botframework.com/embed/KnowCovid?s=YOUR_SECRET_HERE'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
       <section class="text-gray-600 body-font">
@@ -103,6 +120,19 @@
           <button class="flex mx-auto mt-16 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">SELF ANALYSIS</button>
         </div>
       </section>
+
+
+
+
+
+      <iframe src='https://webchat.botframework.com/embed/KnowCovid?s=PIiqG9BtNiQ.XMJ6Xkgjm0l6-BMzeYCxdlyT_NaCzMEq6XlxeBKWvhw'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+
+
+
+
+
+
+
 
 
 
