--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
           </div>
         </div>
       </section>
-<iframe src='https://webchat.botframework.com/embed/KnowCovid?s=YOUR_SECRET_HERE'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 
 
 
@@ -122,19 +121,12 @@
       </section>
 
 
-
-
-
-      <iframe src='https://webchat.botframework.com/embed/KnowCovid?s=PIiqG9BtNiQ.XMJ6Xkgjm0l6-BMzeYCxdlyT_NaCzMEq6XlxeBKWvhw'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
-
+      <iframe src='https://webchat.botframework.com/embed/KnowCovid?s=kkRVDNvi3G0.DobBcALHa4BDJLkM_GGdRCaL9I1b6pQzfJB7tFt05qc'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 
 
 
 
-
-
-
-
+      
 
       <section class="text-gray-400 bg-gray-900 body-font">
         <div class="container px-5 py-24 mx-auto flex flex-wrap">
