--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
 
 
+
       <section class="text-gray-600 body-font">
         <div class="container px-5 py-24 mx-auto">
           <div class="flex flex-col text-center w-full mb-20">
@@ -116,11 +117,11 @@
               </a>
             </div>
           </div>
-          <button class="flex mx-auto mt-16 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">SELF ANALYSIS</button>
+          <button class="flex mx-auto mt-16 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Ask Anything related to COVID-19 by typing below</button>
         </div>
       </section>
 
-
+<hr>
       <iframe src='https://webchat.botframework.com/embed/KnowCovid?s=kkRVDNvi3G0.DobBcALHa4BDJLkM_GGdRCaL9I1b6pQzfJB7tFt05qc'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 
 
